# deslopper

./: .gitignore  .pre-commit-config.yaml  .ver-bumprc  .verbumprc  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  deslopper.config.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  issue-labeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  tell-or-preset.yml
.github/workflows/: ci.yml  commits.yml  labeler.yml  pr-title.yml  release.yml  screenshots.yml
dev/: screenshots.sh
docs/adr/: 0001-words-are-regex.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
packaging/homebrew/: deslopper.rb
scripts/: bump-release.sh  bump.py  check-skill-discovery.sh  demo.tape  help.tape  postflight.sh  preflight.sh  readme_tells.py  release.sh  screenshots.sh
skills/deslopper/: SKILL.md
src/deslopper/: __init__.py  cli.py  completions.py  config.py  digest.py  discovery.py  engine.py  errors.py  evaluate.py  findings.py  help.py  report.py  rules.py  tiers.py  ui.py
src/deslopper/data/eval/: overview.md.txt  reference.md.txt  (+1 more)
src/deslopper/presets/: __init__.py  recommended.json
src/deslopper/schema/: config.schema.json  output.schema.json
tests/: conftest.py  test_cli.py  test_completions.py  test_config.py  test_digest.py  test_discovery.py  test_e2e.py  test_engine.py  test_evaluate.py  test_golden.py  test_help.py  test_output_style.py  test_readme.py  test_report.py  test_rules.py  test_slop_corpus.py  test_tiers.py  test_version.py
tests/fixtures/: ai_slop.md  ai_slop_entities.md  comprehensive.github.golden  comprehensive.json.golden  comprehensive.md  comprehensive.text.golden
(+2 files in other folders)
