[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deslopper"
version = "0.1.0"
description = "A deterministic prose linter for the mechanical tells of machine-generated writing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "John Valai" }]
keywords = ["lint", "writing", "markdown", "ai", "slop"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
deslopper = "deslopper.cli:main"

[project.entry-points."deslopper.presets"]
recommended = "deslopper.presets.recommended:load"

[tool.hatch.build.targets.wheel]
packages = ["src/deslopper"]

[tool.hatch.build.targets.wheel.force-include]
"src/deslopper/presets/recommended/tells.json" = "deslopper/presets/recommended/tells.json"
"src/deslopper/schema" = "deslopper/schema"

[tool.pytest.ini_options]
testpaths = ["tests"]
